# currency-rs

./: Cargo.toml  README.md
currency-code/: Cargo.toml  README.md
currency-code/src/: error.rs  iso4217.rs  lib.rs
currency-code/tests/: ISO_4217  macro_currency_code.rs
currency-code/tests/ISO_4217/: Active_codes.csv  README.md
