[package]
name = "currency-code"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Currency Code"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/x-code-rs"
homepage = "https://github.com/bk-rs/x-code-rs"
documentation = "https://docs.rs/currency-code"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
csv = { version = "1.1" }
